--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="my-app-7/src/styles.css" />
   </head>
 
   <body>
@@ -68,6 +68,6 @@
       </div>
     </div>
 
-    <script src="src/app.js"></script>
+    <script src="my-app-7/src/app.js"></script>
   </body>
 </html>
