Adding a button for link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
         </div>
       </div>
     </div>
-    <link rel="stylesheet" href="https://github.com/Marrow89/my-app-7.git" />
+    <button placeholder="To GitHub">
+      <link rel="stylesheet" href="https://github.com/Marrow89/my-app-7.git" />
+    </button>
     <script src="my-app-7/src/app.js"></script>
   </body>
 </html>
