adding link to html

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </div>
       </div>
     </div>
+    <a href="https://github.com/Marrow89/my-app-7.git">GitHub Link Here</a>
     <script src="src/index.js"></script>
   </body>
 </html>
