Updated link to Respository
had it linking to the project incorrectly

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </div>
     </div>
-    <a href="https://grand-cendol-ec25df.netlify.app">GitHub Link Here</a>
+    <a href="https://github.com/Marrow89/my-app-7.git">GitHub Link Here</a>
     <script src="src/index.js"></script>
   </body>
 </html>
