--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="https://github.com/axios/axios.git" />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
 
@@ -16,6 +22,10 @@
     <div class="container">
       <div class="weather-homework">
         <h1>Redding, California 🌞 92°F</h1>
+        <ul>
+          <li>Saturday 17:00</li>
+          <li>Sunny</li>
+        </ul>
 
         <form class="control-form" id="control-form">
           <input
@@ -30,7 +40,25 @@
         <span id="currentDay"></span>
         <span id="currentHour"></span>
         <span id="currentMinute"></span>
-
+        <div class="rows">
+          <div class="col-6">
+            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
+            alt="Sunny"/>
+            13&deg;C | &deg; 
+        </div>
+<div class="col-6">
+  <ul>
+    <li>
+      Precipitation: 0%
+    </li>
+    <li>
+      Humidity: 0%
+    </li>
+    <li>
+      Wind Speed: 1 km/h
+    </li>
+  </ul>
+</div>
         <div class="row">
           <div class="card" style="width: 80px">
             <div class="card-body-sm">
