--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="col-6">
             <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
             alt="Sunny"/>
-            13&deg;C | &deg; 
+           
         </div>
 <div class="col-6">
   <ul>
@@ -95,7 +95,9 @@
         </div>
       </div>
     </div>
-    <a href="https://github.com/Marrow89/my-app-7.git">GitHub Link Here</a>
+    <small>
+    <a href="https://github.com/Marrow89/my-app-7.git" target="_blank">Coded by Larissa Snell, Hosted on GitHub</a>
+    </small>
     <script src="src/index.js"></script>
   </body>
 </html>
