--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 id="icon"
               />
               <div>
-                <strong id="temperature"></strong><span class="units"> °C</span>
+                <strong id="temperature"></strong
+                ><span class="units"> °C | °F</span>
               </div>
             </div>
           </div>
