Update styling still

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 id="icon"
               />
               <div>
-                <strong id="temperature"></strong
-                ><span class="units"> °C | °F</span>
+                <strong id="temperature">13</strong
+              ><span class="units"> °C | °F </span>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
         </div>
       </div>
     </div>
-    <small>
+    <small class="link">
       <a href="https://github.com/Marrow89/my-app-7.git" target="_blank"
         >Coded by Larissa Snell, Hosted on GitHub</a
       >
