--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
                 alt="Sunny"
                 id="icon"
               />
-              <div>
+              
                 <strong id="temperature">13</strong
               ><span class="units"> °C | °F </span>
+              </div>
               </div>
             </div>
           </div>
