reversed that change to the div position

--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                 alt="Sunny"
                 id="icon"
               />
-              
+              <div>
                 <strong id="temperature">13</strong
-              ><span class="units"> °C | °F </span>
-              </div>
+                ><span class="units"> °C | °F </span>
               </div>
             </div>
           </div>
