--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         </div>
         <div class="col-6">
           <ul>
-            <li class="description">Precipitation: 0%</li>
-            <li class="humidity">Humidity: 0%</li>
-            <li class="wind">Wind Speed: 1 km/h</li>
+            <li>Appears: <span id="description"></span></li>
+            <li>Humidity: <span id="humidity"></span>%</li>
+            <li>Wind: <span id="wind"></span>km/h</li>
           </ul>
         </div>
         <div class="row">
