--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     <div class="container">
       <div class="weather-homework">
         <h1>Redding, California 🌞 92°F</h1>
-        <ul>
-          <li>Sunny</li>
-        </ul>
+        
 
         <form class="control-form" id="control-form">
           <input
@@ -55,7 +53,7 @@
                 id="icon"
               />
               <div>
-                <strong id="temperature">13</strong
+                <strong id="temperature"></strong
                 ><span class="units"> °C | °F </span>
               </div>
             </div>
