--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 id="icon"
               />
               <div>
-                <strong id="temperature"></strong
+                <strong id="temperature">13</strong
                 ><span class="units"> °C | °F </span>
               </div>
             </div>
