Testing out the weather image- changing to match city searched

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     <div class="container">
       <div class="weather-homework">
         <h1>Redding, California 🌞 92°F</h1>
-        
 
         <form class="control-form" id="control-form">
           <input
@@ -47,11 +46,7 @@
         <div class="rows">
           <div class="col-6">
             <div class="d-flex weather-temperature">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                alt="Sunny"
-                id="icon"
-              />
+              <img src="" alt="Sunny" id="icon" />
               <div>
                 <strong id="temperature">13</strong
                 ><span class="units"> °C | °F </span>
