--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="rows">
           <div class="col-6">
             <div class="d-flex weather-temperature">
-              <img src="" alt="Sunny" id="icon" />
+              <img src=".." alt="Sunny" id="icon" />
               <div>
                 <strong id="temperature">13</strong
                 ><span class="units"> °C | °F </span>
