Updating unit conversion, checking function of function

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
               <img src=".." alt="Sunny" id="icon" />
               <div>
                 <strong id="temperature">13</strong
-                ><span class="units"> °C | °F </span>
+                ><span class="units">
+                  °C | <a href="#" id="fahrenheit-link">°F</a></span
+                >
               </div>
             </div>
           </div>
