--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
               <div>
                 <strong id="temperature">13</strong
                 ><span class="units">
-                  °C | <a href="#" id="fahrenheit-link">°F</a></span
+                  <a href="#" id="celsius-link">°C</a> |
+                  <a href="#" id="fahrenheit-link">°F</a></span
                 >
               </div>
             </div>
