--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div>
                 <strong id="temperature">13</strong
                 ><span class="units">
-                  <a href="#" id="celsius-link">°C</a> |
+                  <a href="#" id="celsius-link" class="active">°C</a> |
                   <a href="#" id="fahrenheit-link">°F</a></span
                 >
               </div>
