--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         </div>
       </div>
     </div>
-    <small class="link">
+    <div class="link">
       <a href="https://github.com/Marrow89/my-app-7.git" target="_blank"
         >Coded by Larissa Snell, Hosted on GitHub</a
       >
-    </small>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
