--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
           <input type="submit" />
         </form>
 
-        <span id="currentDay"></span>
-        <span id="currentHour"></span>
-        <span id="currentMinute"></span>
-
+       
         <div class="rows">
           <div class="col-6">
             <div class="d-flex weather-temperature">
@@ -65,39 +62,8 @@
             <li>Wind: <span id="wind"></span>km/h</li>
           </ul>
         </div>
-        <div class="row">
-          <div class="card" style="width: 80px">
-            <div class="card-body-sm">
-              <h6 class="card-title">Monday</h6>
-              <p class="card-text">99&deg;/72°</p>
-            </div>
-          </div>
-          <div class="card" style="width: 80px">
-            <div class="card-body-sm">
-              <h6 class="card-title">Tuesday</h6>
-              <p class="card-text">99°/69°</p>
-            </div>
-          </div>
-          <div class="card" style="width: 105px">
-            <div class="card-body-sm">
-              <h6 class="card-title">Wednesday</h6>
-              <p class="card-text">98°/70°</p>
-            </div>
-          </div>
-
-          <div class="card" style="width: 90px">
-            <div class="card-body-sm">
-              <h6 class="card-title">Thursday</h6>
-              <p class="card-text">99°/73°</p>
-            </div>
-          </div>
-
-          <div class="card" style="width: 80px">
-            <div class="card-body-sm">
-              <h6 class="card-title">Friday</h6>
-              <p class="card-text">98°/75°</p>
-            </div>
-          </div>
+       <div class="weather-forecast" id="forecast"></div>
+        
         </div>
       </div>
     </div>
