--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Project 11</title>
     <meta charset="UTF-8" />
-    <script
-      src="https://unpkg.com/axios/dist/axios.min.js"
-     ></script>
+   
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,8 +19,7 @@
     
     <link rel="stylesheet" href="src/styles.css" />
   </head>
-
-  <body>
+<body>
     <div class="container">
       <div class="weather-homework">
         <h1>Redding, California 🌞 92°F</h1>
@@ -30,6 +28,7 @@
           <input
             type="search"
             placeholder="Search City"
+            class="control-form"
             autofocus="on"
             autocomplete="off"
             id="city-input"
@@ -37,6 +36,9 @@
           <input type="submit" />
         </form>
 
+<span id="currentDay"></span>
+<span id="currentHour"></span>
+<span id="currentMinute"></span>
        
         <div class="row">
           <div class="col-6">
