--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="weather-homework">
         <h1>Redding, California 🌞 92°F</h1>
 
-        <form class="control-form" id="control-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Search City"
@@ -78,18 +78,13 @@
                 </div>
                 </div>
           </div>
-          
           </div>
-
-
-        
         </div>
       </div>
     </div>
     <div class="link">
       <a href="https://github.com/Marrow89/my-app-7.git" target="_blank"
-        >Coded by Larissa Snell, Hosted on GitHub</a
-      >
+        >Coded by Larissa Snell, Hosted on GitHub</a>
     </div>
     <script src="src/index.js"></script>
   </body>
