--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           />
           <input type="submit" />
         </form>
+        <h2 id="city"></h2>
 
 <span id="currentDay"></span>
 <span id="currentHour"></span>
