--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container">
       <div class="weather-homework">
-        <h1>Redding, California 🌞 92°F</h1>
+        <h1></h1>
 
         <form class="search-form" id="search-form">
           <input
@@ -55,14 +55,14 @@
             </div>
           </div>
         </div>
-        <div class="row">
-        <div class="col-6">
+        <div class="overview">
+        
           <ul>
+               <li>Last updated: <span id="date"></span></li>
             <li>Appears: <span id="description"></span></li>
             <li>Humidity: <span id="humidity"></span>%</li>
             <li>Wind: <span id="wind"></span> km/h</li>
           </ul>
-        </div>
        </div>
 <div class="row">
           <div class="col-2">
